updated the code to display exceptions